--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.9.6",
     "@prisma/client": "^6.1.0",
+    "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-icons": "^1.3.2",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.47.12",
